--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,34 +1,41 @@
-# Node.js / Next.js (Frontend)
-node_modules/
-.next/
-out/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.DS_Store
+.pnpm-debug.log*
 
-# Logs
-logs
-*.log
+# env files (can opt-in for committing if needed)
+.env*
 
-# Build outputs
-.next/
-out/
+# vercel
+.vercel
 
-# Static files
-*.lock
-
-# Testing
-coverage/
-*.lcov
-
-# IDE and OS-related files
-*.swp
-*.swo
-.vscode/
-.idea/
-.DS_Store
+# typescript
+*.tsbuildinfo
+next-env.d.ts
