--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-pdf": "^9.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.3"
